<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>l3xz</name>
  <version>1.0.0</version>
  <description>General launch files for L3XZ</description>
  <maintainer email="consulting@lxrobotics.com">Alexander Entinger</maintainer>
  <license>CC BY-SA 4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
